# notification-tele-railway

./: .env.example  .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt
alert_mcp/: __init__.py  asgi.py  instruments.py  logging_config.py  main.py  mcp_server.py  models.py  oanda.py  service.py  settings.py  store.py  telegram.py
tests/integration/: test_asgi_app.py
tests/unit/: __init__.py  test_instruments.py  test_mcp_tools.py  test_service.py  test_store.py  test_telegram.py
